--- a/doc/src/sgml/stylesheet.css
+++ b/doc/src/sgml/stylesheet.css
@@ -61,3 +61,7 @@ DIV.EXAMPLE {
 
 .NAVHEADER TH	{ font-style: italic; }
 .COMMENT	{ color: red; }
+
+VAR		{ font-family: monospace; font-style: inherit; }
+/* Konqueror's standard style for ACRONYM is italic. */
+ACRONYM		{ font-style: inherit; }
