--- a/doc/src/sgml/stylesheet.css
+++ b/doc/src/sgml/stylesheet.css
@@ -62,6 +62,6 @@ DIV.EXAMPLE {
 .NAVHEADER TH	{ font-style: italic; }
 .COMMENT	{ color: red; }
 
-VAR		{ font-family: monospace; font-style: inherit; }
+VAR		{ font-family: monospace; font-style: italic; }
 /* Konqueror's standard style for ACRONYM is italic. */
 ACRONYM		{ font-style: inherit; }
